data/derived/comb/progs/unify/prog0926.ml.out
Characters 108-114:
  | 0 -> buildX 
         ^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type unit
